// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly not pressable 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#007398",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
      },
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": 1,
        "lineHeight": 20,
        "textTransform": "uppercase",
      },
    ]
  }
>
  Test Person
</Text>
`;

exports[`renders correctly with name 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="NameButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        null,
        Object {},
        null,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
          },
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 20,
            "textTransform": "uppercase",
          },
        ]
      }
    >
      Test Person
    </Text>
  </View>
</View>
`;

exports[`renders correctly without name 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#007398",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
      },
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": 1,
        "lineHeight": 20,
        "textTransform": "uppercase",
      },
    ]
  }
>
  MissionHub user
</Text>
`;
